--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,22 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
+//bootstrap 5
+
 @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-icons/font/bootstrap-icons.css';
+
+//fontawesome-free
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/brands";
+@import "@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/regular";
+
+// header
+@import "modules/header";
+
+// hero section
+@import "modules/hero";
+
+// article
+@import "modules/article";
